@@ -1,5 +1,6 @@
 1.5.0 /
 [Alexandr Topilski]
+- Pub/Sub dialog
 
 1.4.1 / January 12, 2017
 [Alexandr Topilski]
